# LearningResourceScraper

./: README.md  pyproject.toml
news/: .env.EXAMPLE
news/news/: items.py  pipelines.py  settings.py
news/news/spiders/: news_spider.py
page/panel/: package-lock.json  package.json
